lib/common/libs/polygonidcore/native_polygonidcore.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names, unused_element, unused_field, unused_local_variable

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings to `ios/Classes/libpolygonid.h`.
class NativePolygonIdCoreLib {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativePolygonIdCoreLib(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativePolygonIdCoreLib.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  late final ffi.Pointer<ffi.Int> ___mb_cur_max =
      _lookup<ffi.Int>('__mb_cur_max');

  int get __mb_cur_max => ___mb_cur_max.value;

  set __mb_cur_max(int value) => ___mb_cur_max.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Char>> _suboptarg =
      _lookup<ffi.Pointer<ffi.Char>>('suboptarg');

  ffi.Pointer<ffi.Char> get suboptarg => _suboptarg.value;

  set suboptarg(ffi.Pointer<ffi.Char> value) => _suboptarg.value = value;

  int PLGNAuthV2InputsMarshal(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAuthV2InputsMarshal(
      jsonResponse,
      in1,
      status,
    );
  }

  late final _PLGNAuthV2InputsMarshalPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNAuthV2InputsMarshal');
  late final _PLGNAuthV2InputsMarshal = _PLGNAuthV2InputsMarshalPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNCalculateGenesisID(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNCalculateGenesisID(
      jsonResponse,
      in1,
      status,
    );
  }

  late final _PLGNCalculateGenesisIDPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNCalculateGenesisID');
  late final _PLGNCalculateGenesisID = _PLGNCalculateGenesisIDPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNNewGenesisID(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNNewGenesisID(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNNewGenesisIDPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNNewGenesisID');
  late final _PLGNNewGenesisID = _PLGNNewGenesisIDPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNNewGenesisIDFromEth(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNNewGenesisIDFromEth(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNNewGenesisIDFromEthPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNNewGenesisIDFromEth');
  late final _PLGNNewGenesisIDFromEth = _PLGNNewGenesisIDFromEthPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNW3CCredentialToCoreClaim(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNW3CCredentialToCoreClaim(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNW3CCredentialToCoreClaimPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNW3CCredentialToCoreClaim');
  late final _PLGNW3CCredentialToCoreClaim =
      _PLGNW3CCredentialToCoreClaimPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNCreateClaim(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNCreateClaim(
      jsonResponse,
      in1,
      status,
    );
  }

  late final _PLGNCreateClaimPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNCreateClaim');
  late final _PLGNCreateClaim = _PLGNCreateClaimPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNIDToInt(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNIDToInt(
      jsonResponse,
      in1,
      status,
    );
  }

  late final _PLGNIDToIntPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNIDToInt');
  late final _PLGNIDToInt = _PLGNIDToIntPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNProofFromSmartContract(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNProofFromSmartContract(
      jsonResponse,
      in1,
      status,
    );
  }

  late final _PLGNProofFromSmartContractPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNProofFromSmartContract');
  late final _PLGNProofFromSmartContract =
      _PLGNProofFromSmartContractPtr.asFunction<
          int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNProfileID(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNProfileID(
      jsonResponse,
      in1,
      status,
    );
  }

  late final _PLGNProfileIDPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNProfileID');
  late final _PLGNProfileID = _PLGNProfileIDPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNAtomicQuerySigV2Inputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAtomicQuerySigV2Inputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNAtomicQuerySigV2InputsPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNAtomicQuerySigV2Inputs');
  late final _PLGNAtomicQuerySigV2Inputs =
      _PLGNAtomicQuerySigV2InputsPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNSigV2Inputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNSigV2Inputs(
      jsonResponse,
      in1,
      status,
    );
  }

  late final _PLGNSigV2InputsPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNSigV2Inputs');
  late final _PLGNSigV2Inputs = _PLGNSigV2InputsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNAtomicQueryMtpV2Inputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAtomicQueryMtpV2Inputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNAtomicQueryMtpV2InputsPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNAtomicQueryMtpV2Inputs');
  late final _PLGNAtomicQueryMtpV2Inputs =
      _PLGNAtomicQueryMtpV2InputsPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNMtpV2Inputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNMtpV2Inputs(
      jsonResponse,
      in1,
      status,
    );
  }

  late final _PLGNMtpV2InputsPtr = _lookup<
      ffi.NativeFunction<
          GoUint8 Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>('PLGNMtpV2Inputs');
  late final _PLGNMtpV2Inputs = _PLGNMtpV2InputsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNAtomicQuerySigV2OnChainInputs(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAtomicQuerySigV2OnChainInputs(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }
